--- a/paper.bib
+++ b/paper.bib
@@ -32,3 +32,32 @@
     note = {A tech blog about fun things with Python and embedded electronics}
     URL = {http://www.paulvangent.com/2016/08/05/emotion-recognition-using-facial-landmarks/}
 }
+
+@inproceedings{kanade2000comprehensive,
+  title={Comprehensive database for facial expression analysis},
+  author={Kanade, Takeo and Cohn, Jeffrey F and Tian, Yingli},
+  booktitle={Automatic Face and Gesture Recognition, 2000. Proceedings. Fourth IEEE International Conference on},
+  pages={46--53},
+  year={2000},
+  organization={IEEE}
+}
+
+@inproceedings{lucey2010extended,
+  title={The extended cohn-kanade dataset (ck+): A complete dataset for action unit and emotion-specified expression},
+  author={Lucey, Patrick and Cohn, Jeffrey F and Kanade, Takeo and Saragih, Jason and Ambadar, Zara and Matthews, Iain},
+  booktitle={Computer Vision and Pattern Recognition Workshops (CVPRW), 2010 IEEE Computer Society Conference on},
+  pages={94--101},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{plutchik1980general,
+  title={A general psychoevolutionary theory of emotion},
+  author={Plutchik, Robert},
+  journal={Theories of emotion},
+  volume={1},
+  number={3-31},
+  pages={4},
+  year={1980},
+  publisher={Academic Press New York}
+}
