Add method, start on results

--- a/paper.bib
+++ b/paper.bib
@@ -61,3 +61,14 @@
   year={1980},
   publisher={Academic Press New York}
 }
+
+@article{leary2015seemingly,
+  title={Why Seemingly Trivial Events Sometimes Evoke Strong Emotional Reactions: The Role of Social Exchange Rule Violations},
+  author={Leary, Mark R and Diebels, Kate J and Jongman-Sereno, Katrina P and Fernandez, Xuan Duong},
+  journal={The Journal of social psychology},
+  volume={155},
+  number={6},
+  pages={559--575},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
