Added corrections to 'method' chapter

--- a/paper.tex
+++ b/paper.tex
@@ -275,6 +275,59 @@ that is, in any way, provoking. We have selected three videos which have been ed
     \item{Failarmy, best fails of 2017}
 \end{enumerate}
 
+\subsection{Background information}
+We want to know why the users show a specific emotion at a specific moment in the shown video. In order to
+do so, we're trying to find any correlation between the user's origin and the shown emotion. Therefore,
+we asked them the following set of questions before each session started:
+\begin{itemize}
+    \item{What's your name?}
+    \item{What's your gender?}
+    \item{How old are you?}
+    \item{Do you live alone or with others?}
+    \item{Where do you live?}
+    \item{Were you also raised in this city?}
+    \item{Do you have any siblings?}
+    \item{What's your relationship status?}
+    \item{What kind of education are you currently in?}
+    \item{What kind of job do you have?}
+    \item{Do you have any religious convictions?}
+    \item{What are your hobbies?}
+    \item{Do you often go abroad?}
+    \item{Do you speak any foreign languages?}
+\end{itemize}
+
+\subsection{Recording the participants}
+To give a clear impression of how the sessions were conducted, see the step-by-step description below.
+\begin{enumerate}
+    \item{The participant and the gamemaster gather in one room, both taking place on a chair.}
+    \item{The gamemaster asks the participant if they are okay with being recorded.}
+    \item{The gamemaster explains how to start the movies.}
+    \item{The gamemaster leaves the room.}
+    \item{The participant starts the movie by clicking on a button (spacebar).}
+    \item{The video (<1 minute) starts on the laptop.}
+    \item{The webcam starts recording the participant while they are watching the video.}
+    \item{After the video ends, the gamemaster joins the participant again.}
+    \item{The gamemaster pressed a button to show the visualized model on the laptop.}
+\end{enumerate}
+
+\subsection{Conversation with the participant}
+After the sessions have been conducted, we’re looking for answers. Does the visualized model show the 
+correct emotions according to what the users have experienced? Does the prototype have enough incentive to start 
+a discussion regarding the shown content? To get answers to these questions, we've asked our participants 
+the following set of questions:
+\begin{itemize}
+    \item{What did you see in the video?}
+    \item{How do you feel about it?}
+    \item{Why do you feel that way?}
+    \item{Take a look at the model. What do you think it shows?}
+    \item{\emph{The gamemaster explains the model.} Does the model show how you felt about the video?}
+    \item{How do you feel about the concept "Showing a video to provoke an emotional reaction?"}
+    \item{What do you think about the prototype and the visualized model?}
+    \item{Do you think this contributes to starting a conversation regarding people's emotions?}
+    \item{Do you see yourself discussing your emotions with other people regarding the shown content?}
+\end{itemize}
+
+
 %------------------------------------------------
 
 \section{Results} \label{results}
