Add subquestions to introduction

--- a/paper.tex
+++ b/paper.tex
@@ -124,6 +124,15 @@ that is required for the goal of the project: starting a meaningful conversation
 a specific subject. Furthermore, if the prototype proves to be useful and provides valid data, it might be used in subsequent
 research as a tool for collecting data.
 
+To answer the main question, several sub-questions have been formulated relevant to the main question. 
+The prototype should be capable of helping us answering these questions by collecting relevant data. 
+Throughout this paper, these sub-questions will be answered. For example, to answer the main question, 
+we want to know if our prototype gives accurate predictions in which the participants can relate. 
+We also want to know if participants are willing to start a discussion on their own, or if they need some 
+other kind of incentive alongside the prototype. It's also very important to know if the discussion has the 
+desired effect, which is making the content relevant.
+
+
 %------------------------------------------------
 
 \section{Related work}
