Fix number missing

--- a/paper.tex
+++ b/paper.tex
@@ -512,7 +512,7 @@ using open source tools and libraries, capable of predicting emotions from video
 to the aforementioned model.
 Finally, we used the created prototype to conduct our user research. We tested the prototype with 13 different
 subjects while interviewing them. The subsequent data analysis concluded that the prototype works largely as
-expected. Our expectations and the results from the prototype were mostly correct, and X out of the 13 subjects
+expected. Our expectations and the results from the prototype were mostly correct, and 12 out of the 13 subjects
 agreed with the emotions recognized by the prototype. The user research and data analysis also showed us the
 imperfections of the prototype. This includes a number of unexpected emotions measured by the prototype.
 This could be explained by too small of a dataset used to train the machine learning model responsible for
